# wows-replays

./: .gitignore  Cargo.toml  LICENSE.md  README.md
.github/: dependabot.yml
.github/workflows/: rust.yml
analysis/: Cargo.toml
analysis/src/: damage_trails.rs  lib.rs  trails.rs
decxxd/: Cargo.toml
decxxd/src/: main.rs
idxpkg/: Cargo.toml
idxpkg/src/: main.rs
parser/: Cargo.toml
parser/src/: error.rs  game_params.rs  lib.rs  main.rs  nested_property_path.rs  packet.rs  packet2.rs  parse_77.rs  resource_loader.rs  version.rs  wowsreplay.rs
parser/src/analyzer/: analyzer.rs  chat.rs  common.rs  damage_trails.rs  decoder.rs  mapping.rs  mod.rs  packet_dump.rs  summary.rs  survey.rs  trails.rs
parser/src/analyzer/battle_controller/: battle_controller.rs  controller.rs  mod.rs  observer.rs
parser/src/rpc/: entitydefs.rs  mod.rs  typedefs.rs
path_tracer/: Cargo.toml
path_tracer/src/: main.rs
replayserver/: Cargo.toml
replayserver/src/: main.rs
replayserver/templates/: page.html.tera
replayshark/: Cargo.toml  build.rs
replayshark/src/: main.rs
src/: main.rs  packet.rs
stats_grabber/: Cargo.toml
stats_grabber/src/: main.rs
streamer/: Cargo.toml
streamer/src/: main.rs
streamserver/: Cargo.toml
streamserver/assets/: index.html  script.js
streamserver/src/: broker.rs  main.rs
test/replays/: version-3747819.txt  version-3747819.wowsreplay
versions/0.10.10/scripts/: components.xml
versions/0.10.10/scripts/component_defs/: ShipAcesComponent.def  VSEventComponent.def  XmppComponent.def
versions/0.10.10/scripts/entity_defs/: alias.xml
versions/0.10.11/: scripts-4883153.tar
versions/0.10.11/scripts/component_defs/: MatchmakerComponent.def
versions/0.10.11/scripts/entity_defs/: alias.xml
versions/0.10.11/scripts/entity_defs/interfaces/: AccountPData.def
versions/0.10.3/scripts/: components.xml
versions/0.10.3/scripts/component_defs/: DockComponent.def  RankedBattlesComponent.def
versions/0.10.3/scripts/entity_defs/: alias.xml
versions/0.10.3/scripts/entity_defs/interfaces/: DebugDrawEntity.def  HitLocationManagerOwner.def
versions/0.10.3/scripts/user_data_object_defs/: Barge.def  Building.def  SpawnPoint.def
versions/0.10.3/spaces/41_Conquest_Sub/: postfx.cfg
versions/0.10.3/spaces/47_Sleeping_Giant/: lightmap_ao.dd2
versions/0.10.4/scripts/: components.xml
versions/0.10.4/scripts/component_defs/: DockComponent.def  HotFixUpdater.def  VSEventComponent.def
versions/0.10.4/scripts/entity_defs/: alias.xml
versions/0.10.4/scripts/entity_defs/interfaces/: BattleLogicEntityOwner.def  BattleStarterClient.def  DamageDealerOwner.def  VisionOwner.def
versions/0.10.6/scripts/: components.xml
versions/0.10.6/scripts/component_defs/: DockComponent.def
versions/0.10.6/scripts/entity_defs/: alias.xml
versions/0.10.6/scripts/entity_defs/interfaces/: AccountCMDs.def  AccountReady.def  BattleStarterClient.def  BuoyancyOwner.def  HitLocationManagerOwner.def
versions/0.11.0/scripts/component_defs/: MatchmakerComponent.def  RankedBattlesComponent.def  ShipAcesComponent.def  VSEventComponent.def
versions/0.11.0/scripts/entity_defs/: alias.xml
versions/0.11.0/scripts/entity_defs/interfaces/: AviationOwner.def  BattleLogicEntityOwner.def  BattleStarterClient.def  BuoyancyOwner.def  VisionOwner.def
versions/0.11.0/scripts/user_data_object_defs/: Barge.def
versions/0.11.1/scripts/entity_defs/: alias.xml
versions/0.11.1/scripts/entity_defs/interfaces/: AccountEditor.def  AccountUsersRequester.def  EntityHelperAPI.def
versions/0.11.7/scripts/: components.xml
versions/0.11.7/scripts/component_defs/: MatchmakerComponent.def  ShipAcesComponent.def  VSEventComponent.def  XmppComponent.def
versions/0.11.7/scripts/entity_defs/: alias.xml
versions/0.11.7/scripts/entity_defs/interfaces/: AviationOwner.def  HitLocationManagerOwner.def  VisionOwner.def
versions/0.11.7/scripts/user_data_object_defs/: SpatialUIDebugTool.def
