[package]
name = "wows-replays"
version = "0.1.0"
authors = ["Lane Kolbly <lane@rscheme.org>"]
edition = "2018"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nom = "7.0.0"
hexdump = "0.1.0"
flate2 = "1.0.14"
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = "1.0"
thiserror = "1.0.19"
rust-crypto = "0.2.36"
roxmltree = "0.14.1"
serde-pickle = { version = "1.0", git = "https://github.com/landaire/serde-pickle" }
rust-embed = "6.0.0"
modular-bitfield = "0.11.2"
bitreader = "0.3.4"
kinded = "0.3"
variantly = "0.4"
strum = "0.25"
strum_macros = "0.25"
derive_builder = "0.12"
