[package]
name = "replayserver"
version = "0.1.0"
edition = "2018"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
analysis = { path = "../analysis" }
rocket = "0.5.0-rc.1"
lazy_static = "1.4.0"
walkdir = "2.3.2"
tera = "1.12.1"
wows-replays = { version = "0.1.0", path = "../parser" }
serde_derive = "1.0.128"
serde = "1.0.128"
chrono = "0.4.19"
rust-embed = "6.0.0"
serde_json = "1.0"
clap = "2.33.3"
