[package]
name = "replayshark"
version = "0.1.0"
authors = ["Lane Kolbly <lane@rscheme.org>"]
edition = "2018"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wows-replays = { version = "0.1.0", path = "../parser" }
clap = "2.33.1"
walkdir = "2.3.2"

[build-dependencies]
built = { version = "0.5.1", features = [ "git2", "chrono" ] }
