[package]
name = "replayshark"
version = "0.1.0"
authors = ["Lane Kolbly <lane@rscheme.org>"]
edition = "2018"
build = "build.rs"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["graphics"]
graphics = ["analysis/graphics"]

[dependencies]
analysis = { path = "../analysis", default-features = false }
wows-replays = { version = "0.1.0", path = "../parser" }
clap = "4.0.27"
walkdir = "2.3.2"
chrono = "0.4.19"
serde_json = "1.0"
parse_int = "0.6.0"

[build-dependencies]
built = { version = "0.5.1", features = [ "git2", "chrono" ] }
