[package]
name = "streamserver"
version = "0.1.0"
edition = "2018"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.4.4", features = ["ws", "headers"] }
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version="0.3", features = ["env-filter"] }
tower-http = { version = "0.2.0", features = ["fs", "trace"] }
headers = "0.3"
lazy_static = "1.4.0"
async-channel = "1.6.1"
wows-replays = { path = "../parser" }
serde_derive = "1.0"
serde = "1.0"
serde_json = "1.0"
